--- a/MarchMadness2020M.ipynb
+++ b/MarchMadness2020M.ipynb
@@ -2,6 +2,459 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "men_team_names = pd.read_csv('Data/MTeamSpellings.csv')\n",
+    "women_team_names = pd.read_csv('Data/WTeamSpellings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TeamNameSpelling</th>\n",
+       "      <th>TeamID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a&amp;m-corpus chris</td>\n",
+       "      <td>1394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a&amp;m-corpus christi</td>\n",
+       "      <td>1394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>abilene chr</td>\n",
+       "      <td>1101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>abilene christian</td>\n",
+       "      <td>1101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>abilene-christian</td>\n",
+       "      <td>1101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>air force</td>\n",
+       "      <td>1102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>air-force</td>\n",
+       "      <td>1102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>akron</td>\n",
+       "      <td>1103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>alabama</td>\n",
+       "      <td>1104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>alabama a&amp;m</td>\n",
+       "      <td>1105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>alabama st</td>\n",
+       "      <td>1106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>alabama st.</td>\n",
+       "      <td>1106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>alabama state</td>\n",
+       "      <td>1106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>alabama-am</td>\n",
+       "      <td>1105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>alabama-birmingham</td>\n",
+       "      <td>1412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>alabama-st</td>\n",
+       "      <td>1106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>alabama-state</td>\n",
+       "      <td>1106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>albany</td>\n",
+       "      <td>1107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>albany (ny)</td>\n",
+       "      <td>1107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>albany ny</td>\n",
+       "      <td>1107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>albany-ny</td>\n",
+       "      <td>1107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>alcorn</td>\n",
+       "      <td>1108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>alcorn st</td>\n",
+       "      <td>1108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>alcorn st.</td>\n",
+       "      <td>1108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>alcorn state</td>\n",
+       "      <td>1108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>alcorn-state</td>\n",
+       "      <td>1108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>alliant international</td>\n",
+       "      <td>1109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>alliant intl</td>\n",
+       "      <td>1109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>am-corpus-chris</td>\n",
+       "      <td>1394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>american</td>\n",
+       "      <td>1110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1113</th>\n",
+       "      <td>wichita-state</td>\n",
+       "      <td>1455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1114</th>\n",
+       "      <td>wichitastate</td>\n",
+       "      <td>1455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1115</th>\n",
+       "      <td>william &amp; mary</td>\n",
+       "      <td>1456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1116</th>\n",
+       "      <td>william--mary</td>\n",
+       "      <td>1456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1117</th>\n",
+       "      <td>william-mary</td>\n",
+       "      <td>1456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1118</th>\n",
+       "      <td>winston salem</td>\n",
+       "      <td>1445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1119</th>\n",
+       "      <td>winston-salem</td>\n",
+       "      <td>1445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1120</th>\n",
+       "      <td>winston-salem-state</td>\n",
+       "      <td>1445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1121</th>\n",
+       "      <td>winthrop</td>\n",
+       "      <td>1457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1122</th>\n",
+       "      <td>wis.-green bay</td>\n",
+       "      <td>1453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1123</th>\n",
+       "      <td>wis.-milwaukee</td>\n",
+       "      <td>1454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1124</th>\n",
+       "      <td>wisconsin</td>\n",
+       "      <td>1458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1125</th>\n",
+       "      <td>wisconsin-green bay</td>\n",
+       "      <td>1453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1126</th>\n",
+       "      <td>wisconsin-green-bay</td>\n",
+       "      <td>1453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1127</th>\n",
+       "      <td>wisconsin-milwaukee</td>\n",
+       "      <td>1454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1128</th>\n",
+       "      <td>wku</td>\n",
+       "      <td>1443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1129</th>\n",
+       "      <td>wofford</td>\n",
+       "      <td>1459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1130</th>\n",
+       "      <td>wright st</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1131</th>\n",
+       "      <td>wright st.</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1132</th>\n",
+       "      <td>wright state</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1133</th>\n",
+       "      <td>wright-st</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1134</th>\n",
+       "      <td>wright-state</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1135</th>\n",
+       "      <td>wyoming</td>\n",
+       "      <td>1461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1136</th>\n",
+       "      <td>xavier</td>\n",
+       "      <td>1462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1137</th>\n",
+       "      <td>yale</td>\n",
+       "      <td>1463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1138</th>\n",
+       "      <td>youngstown st</td>\n",
+       "      <td>1464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1139</th>\n",
+       "      <td>youngstown st.</td>\n",
+       "      <td>1464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1140</th>\n",
+       "      <td>youngstown state</td>\n",
+       "      <td>1464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1141</th>\n",
+       "      <td>youngstown-st</td>\n",
+       "      <td>1464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1142</th>\n",
+       "      <td>youngstown-state</td>\n",
+       "      <td>1464</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1143 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           TeamNameSpelling  TeamID\n",
+       "0          a&m-corpus chris    1394\n",
+       "1        a&m-corpus christi    1394\n",
+       "2               abilene chr    1101\n",
+       "3         abilene christian    1101\n",
+       "4         abilene-christian    1101\n",
+       "5                 air force    1102\n",
+       "6                 air-force    1102\n",
+       "7                     akron    1103\n",
+       "8                   alabama    1104\n",
+       "9               alabama a&m    1105\n",
+       "10               alabama st    1106\n",
+       "11              alabama st.    1106\n",
+       "12            alabama state    1106\n",
+       "13               alabama-am    1105\n",
+       "14       alabama-birmingham    1412\n",
+       "15               alabama-st    1106\n",
+       "16            alabama-state    1106\n",
+       "17                   albany    1107\n",
+       "18              albany (ny)    1107\n",
+       "19                albany ny    1107\n",
+       "20                albany-ny    1107\n",
+       "21                   alcorn    1108\n",
+       "22                alcorn st    1108\n",
+       "23               alcorn st.    1108\n",
+       "24             alcorn state    1108\n",
+       "25             alcorn-state    1108\n",
+       "26    alliant international    1109\n",
+       "27             alliant intl    1109\n",
+       "28          am-corpus-chris    1394\n",
+       "29                 american    1110\n",
+       "...                     ...     ...\n",
+       "1113          wichita-state    1455\n",
+       "1114           wichitastate    1455\n",
+       "1115         william & mary    1456\n",
+       "1116          william--mary    1456\n",
+       "1117           william-mary    1456\n",
+       "1118          winston salem    1445\n",
+       "1119          winston-salem    1445\n",
+       "1120    winston-salem-state    1445\n",
+       "1121               winthrop    1457\n",
+       "1122         wis.-green bay    1453\n",
+       "1123         wis.-milwaukee    1454\n",
+       "1124              wisconsin    1458\n",
+       "1125    wisconsin-green bay    1453\n",
+       "1126    wisconsin-green-bay    1453\n",
+       "1127    wisconsin-milwaukee    1454\n",
+       "1128                    wku    1443\n",
+       "1129                wofford    1459\n",
+       "1130              wright st    1460\n",
+       "1131             wright st.    1460\n",
+       "1132           wright state    1460\n",
+       "1133              wright-st    1460\n",
+       "1134           wright-state    1460\n",
+       "1135                wyoming    1461\n",
+       "1136                 xavier    1462\n",
+       "1137                   yale    1463\n",
+       "1138          youngstown st    1464\n",
+       "1139         youngstown st.    1464\n",
+       "1140       youngstown state    1464\n",
+       "1141          youngstown-st    1464\n",
+       "1142       youngstown-state    1464\n",
+       "\n",
+       "[1143 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "men_team_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
